Add machine translation

--- a/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
@@ -230,8 +230,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-s3.adoc:108
+#, fuzzy
 msgid "The default setting for `quarkus.http.limits.max-body-size` is 10240K. This may limit your ability to upload multipart files larger than the default. If you want to upload larger files, you will need to set this limit explicitly."
-msgstr ""
+msgstr "`quarkus.http.limits.max-body-size` のデフォルト設定は 10240K です。このため、デフォルトよりも大きなマルチパートファイルのアップロードが制限される場合があります。より大きなファイルをアップロードしたい場合は、この制限を明示的に設定する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-s3.adoc:109
