--- a/l10n/po/ja_JP/_guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-ui.adoc.po
@@ -352,8 +352,9 @@ msgstr "`style` テンプレートパラメーターで、ページに追加の 
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:183
+#, fuzzy
 msgid "You can pass extra JavaScript for your page in the `script` template parameter. This will be added inline after the JQuery script, so you can safely use JQuery in your script."
-msgstr ""
+msgstr "`script` テンプレートパラメータで、ページ用の追加JavaScriptを渡すことができます。これは、JQuery スクリプトの後にインラインで追加されるので、スクリプト内で安全に JQuery を使用することができます。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:184
