--- a/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
@@ -622,8 +622,9 @@ msgstr "この特定の例の詳細については、 link:https://www.elastic.c
 
 #. type: delimited block =
 #: upstream/_guides/elasticsearch.adoc:313
+#, fuzzy
 msgid "Classes marked with `@ElasticsearchClientConfig` are made application scoped CDI beans by default.  You can override the scope at the class level if you prefer a different scope."
-msgstr ""
+msgstr "`@ElasticsearchClientConfig` と書かれたクラスは、デフォルトでアプリケーション・スコープ付きのCDI Beanになります。異なるスコープを希望する場合は、クラスレベルでスコープを上書きすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch.adoc:315
