--- a/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
@@ -416,8 +416,9 @@ msgstr "Kubernetes/OpenShiftへのデプロイ"
 
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:238
+#, fuzzy
 msgid "The first step is to set up the broker in our namespace.  Following is an example command from the the Knative cli."
-msgstr ""
+msgstr "最初のステップは、私たちの名前空間にブローカーを設定することです。以下は、Knative cliのコマンド例です。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-knative-events.adoc:243
@@ -429,8 +430,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:247
+#, fuzzy
 msgid "The broker we have created is called `default`, this broker will receive the cloud events.  The broker is also referenced in the function YAML files."
-msgstr ""
+msgstr "作成したブローカーは `default` といい、このブローカーはクラウドのイベントを受け取ります。このブローカは、機能のYAMLファイルでも参照されています。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:250
@@ -601,8 +603,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:351
+#, fuzzy
 msgid "You might need to wait a couple of seconds until the curler pod comes up. Run the following to get bash access to the curler pod:"
-msgstr ""
+msgstr "curler ポッドが立ち上がるまで、数秒待つ必要があるかもしれません。以下を実行して、curler pod への bash アクセスを取得します。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-knative-events.adoc:355
