--- a/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
@@ -95,8 +95,9 @@ msgstr "この設定では、サービスとメッセージの定義を `src/mai
 
 #. type: Plain text
 #: upstream/_guides/grpc-getting-started.adoc:61
+#, fuzzy
 msgid "`quarkus-maven-plugin` retrieves a version of `protoc` (the protobuf compiler) from Maven repositories. The retrieved version matches your operating system and CPU architecture.  If this retrieved version does not work in your context, you can download the suitable binary and specify the location via `-Dquarkus.grpc.protoc-path=/path/to/protoc`."
-msgstr ""
+msgstr "`quarkus-maven-plugin` は、Maven リポジトリから `protoc` (protobuf コンパイラ)のバージョンを取得します。取得されたバージョンは、お使いのオペレーティングシステムとCPUアーキテクチャに適合します。この取得したバージョンがあなたのコンテキストで動作しない場合は、適切なバイナリをダウンロードして、 `-Dquarkus.grpc.protoc-path=/path/to/protoc` でその場所を指定できます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-getting-started.adoc:63
