--- a/l10n/po/ja_JP/_guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/kotlin.adoc.po
@@ -647,8 +647,9 @@ msgstr "`com.fasterxml.jackson.module:jackson-module-kotlin` 依存関係と `qu
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:342
+#, fuzzy
 msgid "When using Kotlin data classes with `native-image` you may experience serialization errors that do not occur with the `JVM` version, despite the Kotlin Jackson Module being registered. This is especially so if you have a more complex JSON hierarchy, where an issue on a lower node causes a serialization failure. The error message displayed is a catch-all and typically displays an issue with the root object, which may not necessarily be the case."
-msgstr ""
+msgstr "Kotlin のデータクラスを `native-image` で使用すると、Kotlin Jackson Module が登録されているにもかかわらず、 `JVM` バージョンでは発生しないシリアライズエラーが発生することがあります。これは、より複雑なJSON階層を持っている場合に特に見られる現象で、下位のノードで問題が発生するとシリアライズに失敗します。表示されるエラーメッセージはキャッチオールで、通常はルートオブジェクトの問題を表示しますが、必ずしもそうではない場合もあります。"
 
 #. type: delimited block -
 #: upstream/_guides/kotlin.adoc:346
@@ -658,8 +659,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:349
+#, fuzzy
 msgid "To ensure full-compability with `native-image`, it is recommended to apply the Jackson `@field:JsonProperty(\"fieldName\")` annotation, and set a nullable default, as illustrated below. You can automate the generation of Kotlin data classes for your sample JSON using Intellij plugins (such as JSON to Kotlin Class), and easily enable the Jackson annotation and select nullable parameters as part of the auto-code generation."
-msgstr ""
+msgstr "`native-image` との完全な互換性を確保するためには、Jackson `@field:JsonProperty(\"fieldName\")` アノテーションを適用し、以下の図のように nullable のデフォルトを設定することをお勧めします。Intellijのプラグイン（JSON to Kotlin Classなど）を使用して、サンプルのJSONに対するKotlinデータクラスの生成を自動化し、Jacksonアノテーションを有効にして、自動コード生成の一部としてnullableパラメータを選択することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/kotlin.adoc:353
