--- a/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
@@ -419,8 +419,9 @@ msgstr "アプリがdevモードで実行されるURL。これはローカル側
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:187
+#, fuzzy
 msgid "The `mutable-jar` is then built in the same way that a regular Quarkus jar is built, i.e. by issuing:"
-msgstr ""
+msgstr "`mutable-jar` は、通常のQuarkus jarをビルドするのと同じ方法で、つまり、発行することでビルドされます。"
 
 #. type: delimited block -
 #: upstream/_guides/maven-tooling.adoc:191
