--- a/l10n/po/ja_JP/_guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-json.adoc.po
@@ -382,8 +382,9 @@ msgstr "`application.properties` で `quarkus.jackson.fail-on-unknown-properties
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:197
+#, fuzzy
 msgid "Furthermore, the `ObjectMapper` is configured to format dates and time in ISO-8601 (by disabling the `SerializationFeature.WRITE_DATES_AS_TIMESTAMPS` feature)."
-msgstr ""
+msgstr "さらに、 `ObjectMapper` 、日付と時刻をISO-8601でフォーマットするように設定されています（ `SerializationFeature.WRITE_DATES_AS_TIMESTAMPS` の機能を無効にすることで）。"
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:201
@@ -1252,8 +1253,9 @@ msgstr "単一のJAX-RSアプリケーションのみ"
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:654
+#, fuzzy
 msgid "The RESTEasy extension doesn't support the method `getProperties()` of the class `javax.ws.rs.core.Application`. Moreover, it only relies on the methods `getClasses()` and `getSingletons()` to filter out the annotated resource, provider and feature classes.  It doesn't filter out the built-in resource, provider and feature classes and also the resource, provider and feature classes registered by the other extensions.  Finally the objects returned by the method `getSingletons()` are ignored, only the classes are took into account to filter out the resource, provider and feature classes, in other words the method `getSingletons()` is actually managed the same way as `getClasses()`."
-msgstr ""
+msgstr "RESTEasyエクステンションは、クラス `javax.ws.rs.core.Application` のメソッド `getProperties()` をサポートしていません。さらに、アノテーションされたリソース、プロバイダ、フィーチャークラスをフィルタリングするために、 `getClasses()` と `getSingletons()` のメソッドにのみ依存しています。組み込みのリソース、プロバイダ、機能クラスや、他の拡張機能で登録されたリソース、プロバイダ、機能クラスは除外されません。最後に、メソッド `getSingletons()` が返すオブジェクトは無視され、リソース、プロバイダ、機能クラスをフィルタリングするためにクラスのみが考慮されます。言い換えれば、メソッド `getSingletons()` は実際には `getClasses()` と同じように管理されます。"
 
 #. type: Title ===
 #: upstream/_guides/rest-json.adoc:655
@@ -1273,19 +1275,21 @@ msgstr "リソースクラスでスコープ注釈が宣言されていない場
 
 #. type: Title ==
 #: upstream/_guides/rest-json.adoc:666
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Include/Exclude JAX-RS classes with build time conditions"
-msgstr ""
+msgstr "ビルドタイム条件でJAX-RSクラスを含める/除外する"
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:670
+#, fuzzy
 msgid "Quarkus enables the inclusion or exclusion of JAX-RS Resources, Providers and Features directly thanks to build time conditions in the same that it does for CDI beans.  Thus, the various JAX-RS classes can be annotated with profile conditions (`@io.quarkus.arc.profile.IfBuildProfile` or `@io.quarkus.arc.profile.UnlessBuildProfile`) and/or with property conditions (`io.quarkus.arc.properties.IfBuildProperty` or `io.quarkus.arc.properties.UnlessBuildProperty`) to indicate to Quarkus at build time under which conditions these JAX-RS classes should be included."
-msgstr ""
+msgstr "Quarkusでは、CDI Beanの場合と同様に、ビルド時の条件に応じて、JAX-RSリソース、プロバイダー、および機能を直接包含または除外することができます。したがって、さまざまなJAX-RSクラスは、プロファイル条件（ `@io.quarkus.arc.profile.IfBuildProfile` または `@io.quarkus.arc.profile.UnlessBuildProfile` ）および／またはプロパティ条件（ `io.quarkus.arc.properties.IfBuildProperty` または `io.quarkus.arc.properties.UnlessBuildProperty` ）でアノテーションすることができ、構築時にどの条件でこれらのJAX-RSクラスが含まれるべきかをQuarkusに示すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:672
+#, fuzzy
 msgid "In the following example, Quarkus includes the endpoint `sayHello` if and only if the build profile `app1` has been enabled."
-msgstr ""
+msgstr "次の例では、Quarkusは、ビルドプロファイル `app1` が有効になっている場合に限り、エンドポイント `sayHello` を含めます。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-json.adoc:677
@@ -1309,8 +1313,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:687
+#, fuzzy
 msgid "Please note that if a JAX-RS Application has been detected and the method `getClasses()` and/or `getSingletons()` has/have been overridden, Quarkus will ignore the build time conditions and consider only what has been defined in the JAX-RS Application."
-msgstr ""
+msgstr "JAX-RSアプリケーションが検出され、メソッド `getClasses()` および／または `getSingletons()` がオーバーライドされている／されている場合、Quarkusはビルド時の条件を無視し、JAX-RSアプリケーションで定義されているもののみを考慮することに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/rest-json.adoc:688
