--- a/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
@@ -2384,13 +2384,15 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/resteasy-reactive.adoc:1160
+#, fuzzy
 msgid "Request filters are usually executed on the same thread that the method that handles the request will be executed.  That means that if the method servicing the request is annotated with `@Blocking`, then the filters will also be run on the worker thread.  If the method is annotated with `@NonBlocking` (or is not annotated at all), then the filters will also be run on the same event-loop thread."
-msgstr ""
+msgstr "リクエストフィルターは通常、リクエストを処理するメソッドが実行されるのと同じスレッドで実行されます。つまり、リクエストを処理するメソッドが `@Blocking` でアノテーションされている場合は、フィルターもワーカースレッドで実行されます。メソッドが `@NonBlocking` でアノテーションされている場合（または全くアノテーションされていない場合）、フィルターも同じイベントループのスレッドで実行されます。"
 
 #. type: delimited block =
 #: upstream/_guides/resteasy-reactive.adoc:1164
+#, fuzzy
 msgid "If however a filter needs to be run on the event-loop despite the fact that the method servicing the request will be run on a worker thread, then `@ServerRequestFilter(nonBlocking=true)` can be used.  Note however, that these filters need to be run before **any** filter that does not use that setting and would run on a worker thread."
-msgstr ""
+msgstr "しかし、リクエストを処理するメソッドがワーカースレッドで実行されるにもかかわらず、フィルタをイベントループで実行する必要がある場合、 `@ServerRequestFilter(nonBlocking=true)` を使用することができます。ただし、これらのフィルターは、その設定を使用せず、ワーカースレッドで実行されるフィルター *の*前に実行される必要があることに注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1167
@@ -3430,19 +3432,21 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/resteasy-reactive.adoc:1807
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Include/Exclude JAX-RS classes with build time conditions"
-msgstr ""
+msgstr "ビルドタイム条件でJAX-RSクラスを含める/除外する"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1811
+#, fuzzy
 msgid "Quarkus enables the inclusion or exclusion of JAX-RS Resources, Providers and Features directly thanks to build time conditions in the same that it does for CDI beans.  Thus, the various JAX-RS classes can be annotated with profile conditions (`@io.quarkus.arc.profile.IfBuildProfile` or `@io.quarkus.arc.profile.UnlessBuildProfile`) and/or with property conditions (`io.quarkus.arc.properties.IfBuildProperty` or `io.quarkus.arc.properties.UnlessBuildProperty`) to indicate to Quarkus at build time under which conditions these JAX-RS classes should be included."
-msgstr ""
+msgstr "Quarkusでは、CDI Beanの場合と同様に、ビルド時の条件に応じて、JAX-RSリソース、プロバイダー、および機能を直接包含または除外することができます。したがって、さまざまなJAX-RSクラスは、プロファイル条件（ `@io.quarkus.arc.profile.IfBuildProfile` または `@io.quarkus.arc.profile.UnlessBuildProfile` ）および／またはプロパティ条件（ `io.quarkus.arc.properties.IfBuildProperty` または `io.quarkus.arc.properties.UnlessBuildProperty` ）でアノテーションすることができ、構築時にどの条件でこれらのJAX-RSクラスが含まれるべきかをQuarkusに示すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1813
+#, fuzzy
 msgid "In the following example, Quarkus includes the endpoint `sayHello` if and only if the build profile `app1` has been enabled."
-msgstr ""
+msgstr "次の例では、Quarkusは、ビルドプロファイル `app1` が有効になっている場合に限り、エンドポイント `sayHello` を含めます。"
 
 #. type: delimited block -
 #: upstream/_guides/resteasy-reactive.adoc:1818
@@ -3466,8 +3470,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1828
+#, fuzzy
 msgid "Please note that if a JAX-RS Application has been detected and the method `getClasses()` and/or `getSingletons()` has/have been overridden, Quarkus will ignore the build time conditions and consider only what has been defined in the JAX-RS Application."
-msgstr ""
+msgstr "JAX-RSアプリケーションが検出され、メソッド `getClasses()` および／または `getSingletons()` がオーバーライドされている／されている場合、Quarkusはビルド時の条件を無視し、JAX-RSアプリケーションで定義されているもののみを考慮することに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/resteasy-reactive.adoc:1830
@@ -3477,35 +3482,42 @@ msgstr "RESTEasy Reactiveとは?"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1832
+#, fuzzy
 msgid "In addition to the Server side, RESTEasy Reactive comes with a new MicroProfile Rest Client implementation that is non-blocking at its core."
-msgstr ""
+msgstr "RESTEasy Reactiveには、サーバー側に加えて、ノンブロッキングを核とした新しいMicroProfile Rest Clientの実装が搭載されています。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1835
+#, fuzzy
 msgid "To use it, add the `quarkus-rest-client-reactive` extension to your project.  The client can be used as described in https://quarkus.io/guides/rest-client[Using the REST Client guide] and specified in the https://download.eclipse.org/microprofile/microprofile-rest-client-1.4.1/microprofile-rest-client-1.4.1.html[MicroProfile Rest Client specification], with a few exceptions:"
-msgstr ""
+msgstr "これを使用するには、 `quarkus-rest-client-reactive` エクステンションをプロジェクトに追加します。このクライアントは、いくつかの例外を除いて、「 link:https://quarkus.io/guides/rest-client[Using the REST Client」ガイド]で説明され、 link:https://download.eclipse.org/microprofile/microprofile-rest-client-1.4.1/microprofile-rest-client-1.4.1.html[MicroProfile Rest Client仕様]で指定されているとおりに使用できます。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1837
+#, fuzzy
 msgid "the extension name"
-msgstr ""
+msgstr "拡張子の名前"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1839
+#, fuzzy
 msgid "the default scope of the client for the new extension is `@ApplicationScoped` while the `quarkus-rest-client` defaults to `@Dependent` To change this behavior, set the `quarkus.rest.client.scope` property to the fully qualified scope name."
-msgstr ""
+msgstr "`@ApplicationScoped` `quarkus-rest-client` `@Dependent` この動作を変更するには、 `quarkus.rest.client.scope` プロパティに完全修飾スコープ名を設定します。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1840
+#, fuzzy
 msgid "it is not possible to set `HostnameVerifier` or `SSLContext`"
-msgstr ""
+msgstr "を設定することはできません。 `HostnameVerifier` または `SSLContext`"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1841
+#, fuzzy
 msgid "a few things that don't make sense for a non-blocking implementations, such as setting the `ExecutorService`, don't work"
-msgstr ""
+msgstr "`ExecutorService` の設定など、ノンブロッキング実装では意味をなさないいくつかの機能が動作しません。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1842
+#, fuzzy
 msgid "It is important to note that the `quarkus-rest-client` extension may not work properly with RESTEasy Reactive."
-msgstr ""
+msgstr "なお、 `quarkus-rest-client` 拡張機能は、RESTEasy Reactiveでは正常に動作しない場合がありますのでご注意ください。"
