--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -1903,14 +1903,15 @@ msgstr "テスト"
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:812
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Wiremock"
-msgstr ""
+msgstr "ワイヤーモック"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:815
+#, fuzzy
 msgid "If you configure `mp.jwt.verify.publickey.location` to point to HTTPS or HTTP based JsonWebKey (JWK) set then you can use the same approach as described in the link:security-openid-connect#integration-testing[OpenId Connect Bearer Token Integration testing] `Wiremock` section but only change the `application.properties` to use MP JWT configuration properties instead:"
-msgstr ""
+msgstr "HTTPS または HTTP ベースの JsonWebKey (JWK) セットを指すように `mp.jwt.verify.publickey.location` を設定している場合は、 link:security-openid-connect#integration-testing[OpenId Connect Bearer Token Integration testing] `Wiremock` のセクションで説明したのと同じ方法を使用できますが、MP JWT 設定プロパティを代わりに使用するように `application.properties` を変更するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:821
@@ -1931,8 +1932,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:827
+#, fuzzy
 msgid "It will ensure that the `smallrye-jwt` remote key resolution code also works as expected."
-msgstr ""
+msgstr "これにより、 `smallrye-jwt` リモートキーの解決コードも期待通りに動作するようになります。"
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:828
@@ -1942,8 +1944,9 @@ msgstr "公開鍵の追加"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:831
+#, fuzzy
 msgid "You can use the same approach as described in the link:security-openid-connect#integration-testing[OpenId Connect Bearer Token Integration testing] `Local Public Key` section but only change the `application.properties` to use MP JWT configuration properties instead:"
-msgstr ""
+msgstr "link:security-openid-connect#integration-testing[OpenId Connect Bearer Token Integration testing] `Local Public Key` のセクションで説明したのと同じアプローチを使うことができますが、 `application.properties` を変更するだけで、代わりに MP JWT の構成プロパティを使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:837
@@ -2346,9 +2349,9 @@ msgstr "smallrye.jwt.new-token.lifespan"
 
 #. type: Table
 #: upstream/_guides/security-jwt.adoc:990
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Set this property to `true` for `smallrye.jwt.new-token.issuer` and `smallrye.jwt.new-token.audience` values to override the already initialized `iss` (issuer) and `aud` (audience) claims."
-msgstr ""
+msgstr "既に初期化されている `iss` （発行者）と `aud` （視聴者）の請求を上書きするために、 `smallrye.jwt.new-token.issuer` と `smallrye.jwt.new-token.audience` の値にこのプロパティを `true` に設定します。"
 
 #. type: Title ==
 #: upstream/_guides/security-jwt.adoc:992
