--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -646,8 +646,9 @@ msgstr "`/web-app1/service` と `/web-app2/service`"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:283
+#, fuzzy
 msgid "`quarkus.oidc.authentication.cookie-path` is set to `/` by default but can be narrowed to the more specific root path such as `/web-app`."
-msgstr ""
+msgstr "`quarkus.oidc.authentication.cookie-path` は、デフォルトでは `/` に設定されていますが、 `/web-app` のように、より具体的なルートパスに絞り込むことができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:286
@@ -943,8 +944,9 @@ msgstr "設定リファレンス"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:417
+#, fuzzy
 msgid "The discovered link:https://openid.net/specs/openid-connect-discovery-1_0.html#ProviderMetadata[OpenId Connect Configuration Metadata] is represented by `io.quarkus.oidc.OidcConfigurationMetadata` and can be either injected or accessed as a `SecurityIdentity` `configuration-metadata` attribute."
-msgstr ""
+msgstr "発見された link:https://openid.net/specs/openid-connect-discovery-1_0.html#ProviderMetadata[OpenId Connect Configuration Metadata]は `io.quarkus.oidc.OidcConfigurationMetadata` で表され、 `SecurityIdentity` `configuration-metadata` 属性として注入またはアクセスすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:418
@@ -1260,8 +1262,9 @@ msgstr "テスト"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:554
+#, fuzzy
 msgid "Add the following dependencies to your test project:"
-msgstr ""
+msgstr "テストプロジェクトに以下の依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:583
@@ -1297,8 +1300,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:586
+#, fuzzy
 msgid "Prepare the REST test endpoints, set `application.properties`, for example:"
-msgstr ""
+msgstr "RESTテストのエンドポイントを用意し、 `application.properties` を設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:594
@@ -1313,8 +1317,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:597
+#, fuzzy
 msgid "and finally write the test code, for example:"
-msgstr ""
+msgstr "といった具合に、最後にテストコードを書きます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:601
@@ -1406,13 +1411,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:644
+#, fuzzy
 msgid "`OidcWiremockTestResource` recognizes `alice` and `admin` users. The user `alice` has the `user` role only by default - it can be customized with a `quarkus.test.oidc.token.user-roles` system property. The user `admin` has the `user` and `admin` roles by default - it can be customized with a `quarkus.test.oidc.token.admin-roles` system property.  Additionally, `OidcWiremockTestResource` set token issuer and audience to `https://service.example.com` which can be customized with `quarkus.test.oidc.token.issuer` and `quarkus.test.oidc.token.audience` system properties."
-msgstr ""
+msgstr "`OidcWiremockTestResource` は、 `alice` と `admin` のユーザーを認識します。ユーザー `alice` は、デフォルトで `user` ロールのみを持っています - `quarkus.test.oidc.token.user-roles` システムプロパティでカスタマイズすることができます。ユーザー `admin` は、デフォルトで `user` と `admin` の役割を持っていますが、 `quarkus.test.oidc.token.admin-roles` のシステムプロパティでカスタマイズすることができます。さらに、 `OidcWiremockTestResource` は、トークンの発行者とオーディエンスを `&lt;a href=\"https://service.example.com\" class=\"bare\"&gt;https://service.example.com&lt;/a&gt;`これは `quarkus.test.oidc.token.issuer` と `quarkus.test.oidc.token.audience` のシステムプロパティでカスタマイズできます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:646
+#, fuzzy
 msgid "`OidcWiremockTestResource` will be enhanced going forward to support more complex authorization code flow test scenarios."
-msgstr ""
+msgstr "`OidcWiremockTestResource` は、より複雑なオーソリゼーションコードフローのテストシナリオをサポートするために、今後強化される予定です。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:647
