--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -661,8 +661,9 @@ msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:343
+#, fuzzy
 msgid "The discovered link:https://openid.net/specs/openid-connect-discovery-1_0.html#ProviderMetadata[OpenId Connect Configuration Metadata] is represented by `io.quarkus.oidc.OidcConfigurationMetadata` and can be either injected or accessed as a `SecurityIdentity` `configuration-metadata` attribute."
-msgstr ""
+msgstr "発見された link:https://openid.net/specs/openid-connect-discovery-1_0.html#ProviderMetadata[OpenId Connect Configuration Metadata]は `io.quarkus.oidc.OidcConfigurationMetadata` で表され、 `SecurityIdentity` `configuration-metadata` 属性として注入またはアクセスすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:344
@@ -782,14 +783,15 @@ msgstr "テスト"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect.adoc:415
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Wiremock"
-msgstr ""
+msgstr "ワイヤーモック"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:418
+#, fuzzy
 msgid "Add the following dependencies to your test project:"
-msgstr ""
+msgstr "テストプロジェクトに以下の依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:436
@@ -814,8 +816,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:439
+#, fuzzy
 msgid "Prepare the REST test endpoint, set `application.properties`, for example:"
-msgstr ""
+msgstr "RESTテストのエンドポイントを用意し、 `application.properties` を設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:448
@@ -831,8 +834,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:451
+#, fuzzy
 msgid "and finally write the test code, for example:"
-msgstr ""
+msgstr "といった具合に、最後にテストコードを書きます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:455
@@ -909,19 +913,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:496
+#, fuzzy
 msgid "Testing your `quarkus-oidc` `service` application with `OidcWiremockTestResource` provides the best coverage as even the communication channel is tested against the Wiremock HTTP stubs.  `OidcWiremockTestResource` will be enhanced going forward to support more complex Bearer token test scenarios."
-msgstr ""
+msgstr "`quarkus-oidc` `service` アプリケーションを `OidcWiremockTestResource` でテストすると、通信チャネルが Wiremock HTTP スタブに対してテストされるため、最高のカバレッジが得られます。 `OidcWiremockTestResource` は、より複雑な Bearer トークンのテストシナリオをサポートするために、今後強化される予定です。"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect.adoc:497
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Local Public Key"
-msgstr ""
+msgstr "ローカル公開鍵"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:500
+#, fuzzy
 msgid "You can also use a local inlined public key for testing your `quarkus-oidc` `service` applications:"
-msgstr ""
+msgstr "また、 `quarkus-oidc` `service` アプリケーションのテストに、ローカルのインライン公開鍵を使用することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:505
@@ -939,13 +945,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:510
+#, fuzzy
 msgid "copy `privateKey.pem` from the `integration-tests/oidc-tenancy` in the `main` Quarkus repository and use a test code similar to the one in the `Wiremock` section above to generate JWT tokens. You can use your own test keys if preferred."
-msgstr ""
+msgstr "`integration-tests/oidc-tenancy` から `main` のQuarkusリポジトリに `privateKey.pem` をコピーし、上記 `Wiremock` のセクションと同様のテストコードを使用してJWTトークンを生成します。必要であれば、独自のテストキーを使用することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:512
+#, fuzzy
 msgid "This approach provides a more limited coverage compared to the Wiremock approach - for example, the remote communication code is not covered."
-msgstr ""
+msgstr "このアプローチは、Wiremockのアプローチと比較して、より限定された範囲をカバーします。例えば、リモート通信コードはカバーされません。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:513
