--- a/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
@@ -21,19 +21,21 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/smallrye-metrics.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus - SmallRye Metrics"
-msgstr ""
+msgstr "Quarkus - SmallRye Metrics"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:12
+#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can use https://github.com/smallrye/smallrye-metrics/[SmallRye Metrics], an implementation of the https://github.com/eclipse/microprofile-metrics/[MicroProfile Metrics] specification."
-msgstr ""
+msgstr "このガイドでは、 link:https://github.com/eclipse/microprofile-metrics/[MicroProfile Metrics]仕様の実装である link:https://github.com/smallrye/smallrye-metrics/[SmallRye Metrics]をQuarkusアプリケーションで使用する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:15
+#, fuzzy
 msgid "SmallRye Metrics allows applications to gather various metrics and statistics that provide insights into what is happening inside the application."
-msgstr ""
+msgstr "SmallRye Metricsでは、アプリケーションが様々なメトリクスや統計情報を収集し、アプリケーション内で何が起こっているかを把握することができます。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:19
@@ -47,8 +49,9 @@ msgstr "このガイドで説明するアプリケーション固有のメトリ
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:26
+#, fuzzy
 msgid "link:micrometer[Micrometer] is the recommended approach to metrics for Quarkus.  Use the SmallRye Metrics extension when it's required to retain MicroProfile specification compatibility."
-msgstr ""
+msgstr "link:micrometer[マイクロメーター]は、Quarkusで推奨されるメトリクスの手法です。MicroProfile仕様との互換性を保つために必要な場合は、SmallRye Metricsエクステンションを使用してください。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:27
@@ -63,8 +66,9 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:32
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:33
@@ -115,9 +119,9 @@ msgstr "ソリューションは `microprofile-metrics-quickstart` {quickstarts-
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:50
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:53
@@ -139,8 +143,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:66
+#, fuzzy
 msgid "This command generates a Maven project, importing the `smallrye-metrics`."
-msgstr ""
+msgstr "このコマンドは、 `smallrye-metrics`.NETをインポートしてMavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:69
