--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -328,14 +328,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:162
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Setting up Jacoco"
-msgstr ""
+msgstr "Jacocoの設定"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:165
+#, fuzzy
 msgid "Now we need to add Jacoco to our project. To do this we need to add the following to the `pom.xml` dependencies section:"
-msgstr ""
+msgstr "次に、Jacocoをプロジェクトに追加する必要があります。そのためには、 `pom.xml` dependenciesセクションに以下を追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:173
@@ -350,45 +351,51 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:177
+#, fuzzy
 msgid "This Quarkus extension takes care of everything that would usually be done via the Jacoco maven plugin, so no additional config is required."
-msgstr ""
+msgstr "このQuarkusの拡張機能は、通常はJacoco mavenプラグインで行われることをすべて行いますので、追加の設定は必要ありません。"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:178
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Running the tests with coverage"
-msgstr ""
+msgstr "カバレッジ付きテストの実行"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:182
+#, fuzzy
 msgid "Run `mvn verify`, the tests will be run and the results will end up in `target/jacoco-reports`. This is all that is needed, the `quarkus-jacoco` extension allows Jacoco to just work out of the box."
-msgstr ""
+msgstr "`mvn verify` を実行すると、テストが実行され、その結果が `target/jacoco-reports` に反映されます。必要なのはこれだけで、 `quarkus-jacoco` の拡張機能を使えば、Jacoco はすぐに動作します。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:184
+#, fuzzy
 msgid "There are some config options that affect this:"
-msgstr ""
+msgstr "これにはいくつかの設定オプションがあります。"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:187
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Coverage for tests not using @QuarkusTest"
-msgstr ""
+msgstr "QuarkusTestを使用していないテストのカバレッジ"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:191
+#, fuzzy
 msgid "The Quarkus automatic Jacoco config will only work for tests that are annotated with `@QuarkusTest`. If you want to check the coverage of other tests as well then you will need to fall back to the Jacoco maven plugin."
-msgstr ""
+msgstr "Quarkusの自動Jacoco設定は、 `@QuarkusTest` でアノテーションされたテストに対してのみ機能します。他のテストのカバレッジもチェックしたい場合は、Jacoco mavenプラグインを利用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:194
+#, fuzzy
 msgid "Because Quarkus uses class file transformation it is not possible to use online transformation with the Jacoco agent.  Instead we need to use offline transformation."
-msgstr ""
+msgstr "Quarkusはクラスファイル変換を使用しているため、Jacocoエージェントでオンライン変換を使用することはできません。代わりにオフライン変換を使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:196
+#, fuzzy
 msgid "Instead of including the `quarkus-jacoco` extension in your pom you will need the following config:"
-msgstr ""
+msgstr "`quarkus-jacoco` 拡張機能をpomに含める代わりに、以下のような設定が必要になります。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:246
