--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -246,114 +246,125 @@ msgstr "詳細については、 link:security-oauth2[OAuth2 の使用]ガイド
 
 #. type: Title ====
 #: upstream/_guides/security.adoc:107
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Choosing between OpenId Connect, SmallRye JWT and OAuth2 extensions"
-msgstr ""
+msgstr "OpenId Connect、SmallRye JWT、OAuth2エクステンションの選択"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:110
+#, fuzzy
 msgid "`quarkus-oidc` extension requires an OpenId Connect provider such as Keycloak which can be used to verify the Bearer tokens or authenticate the end users with the Authorization Code flow. In both cases `quarkus-oidc` requires a connection to this OpenId Connect provider."
-msgstr ""
+msgstr "`quarkus-oidc` 拡張機能には、Keycloak のような OpenId Connect プロバイダーが必要で、これは Bearer トークンの検証や Authorization Code フローによるエンドユーザーの認証に使用することができます。どちらの場合も、 `quarkus-oidc` は、この OpenId Connect プロバイダーへの接続を必要とします。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:112
+#, fuzzy
 msgid "`quarkus-oidc` is the only option when the user authentication via Authorization Code flow or supporting multiple tenants is required. It can also request a UserInfo using both Authorization Code Flow and Bearer access tokens."
-msgstr ""
+msgstr "`quarkus-oidc` は、Authorization Code フローによるユーザー認証や、複数のテナントへの対応が必要な場合の唯一の選択肢です。また、Authorization Code FlowとBearerアクセストークンの両方を使ってUserInfoを要求することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:114
+#, fuzzy
 msgid "When the Bearer tokens have to be verified then `quarkus-oidc`, `quarkus-smallrye-jwt` and `quarkus-elytron-security-oauth2` can be used."
-msgstr ""
+msgstr "ベアラートークンを検証する必要がある場合は、 `quarkus-oidc` 、 `quarkus-smallrye-jwt` 、 `quarkus-elytron-security-oauth2` を使用できます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:116
+#, fuzzy
 msgid "If you have Bearer tokens in a JWT format then all these 3 extensions can be used. Both `quarkus-oidc` and `quarkus-smallrye-jwt` support refreshing the JsonWebKey (JWK) set when the OpenId Connect provider rotates the keys, therefore `quarkus-oidc` or `quarkus-smallrye-jwt` should be used for verifying JWT tokens if the remote token introspection has to be avoided or not supported by the providers."
-msgstr ""
+msgstr "JWT形式のBearerトークンを持っている場合は、これら3つの拡張機能をすべて使用することができます。 `quarkus-oidc` と `quarkus-smallrye-jwt` は、OpenId Connect プロバイダーがキーをローテーションする際の JsonWebKey (JWK) セットのリフレッシュをサポートしています。したがって、リモートトークンのイントロスペクションを回避しなければならない場合や、プロバイダーがサポートしていない場合は、JWT トークンの検証に `quarkus-oidc` または `quarkus-smallrye-jwt` を使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:118
+#, fuzzy
 msgid "`quarkus-smallrye-jwt` does not support the remote introspection of the opaque tokens or even JWT tokens - it always relies on the locally available keys - possibly fetched from the OpenId Connect provider. So if you need to introspect the JWT tokens remotely then both `quarkus-oidc` and `quarkus-elytron-security-oauth2` will work. Both extensions also support the verification of the opaque/binary tokens via the remote introspection."
-msgstr ""
+msgstr "`quarkus-smallrye-jwt` は、不透明なトークンや JWT トークンのリモートイントロスペクションをサポートしていません。これは常に、ローカルで利用可能なキー（おそらく OpenId Connect プロバイダーから取得されたもの）に依存します。したがって、JWTトークンをリモートでイントロスペクションする必要がある場合は、 `quarkus-oidc` と `quarkus-elytron-security-oauth2` の両方が機能します。どちらの拡張機能も、リモートイントロスペクションによる不透明/バイナリトークンの検証もサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:120
+#, fuzzy
 msgid "`quarkus-oidc` and `quarkus-smallrye-jwt` can have both JWT and opaque tokens injected into the endpoint code - the injected JWT tokens may offer a richer information about the user. All extensions can have the tokens injected as `Principal`."
-msgstr ""
+msgstr "`quarkus-oidc` と `quarkus-smallrye-jwt` は、JWT トークンと不透明なトークンの両方をエンドポイントコードに注入することができます。注入された JWT トークンは、ユーザーに関するより豊富な情報を提供することができます。すべての拡張機能は、 `Principal` のように、トークンを注入することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:122
+#, fuzzy
 msgid "`quarkus-smallrye-jwt` supports more key formats than `quarkus-oidc`. The latter will only use the JWK-formatted keys which are part of a JWK set. The former - can also work with PEM keys."
-msgstr ""
+msgstr "`quarkus-smallrye-jwt` は `quarkus-oidc` よりも多くのキーフォーマットをサポートしています。後者は、JWKセットの一部であるJWKフォーマットの鍵のみを使用する。前者では、PEMキーも使用可能です。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:124
+#, fuzzy
 msgid "`quarkus-smallrye-jwt` can handle locally not only signed but also inner-signed-and-encrypted or only encrypted tokens. In fact `quarkus-oidc` and `quarkus-elytron-security-oauth2` can verify such tokens too but only by treating them as opaque tokens and verifying them via the remote introspection."
-msgstr ""
+msgstr "`quarkus-smallrye-jwt` は、署名されたトークンだけでなく、内部署名と暗号化されたトークン、または暗号化されたトークンだけをローカルに扱うことができます。実際、 `quarkus-oidc` と `quarkus-elytron-security-oauth2` はそのようなトークンも検証できますが、それらを不透明なトークンとして扱い、リモートイントロスペクションを介して検証することによってのみ可能です。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:126
+#, fuzzy
 msgid "`quarkus-elytron-security-oauth2` is the best choice if you need a light weight library for the remote introspection of either opaque or JWT tokens."
-msgstr ""
+msgstr "`quarkus-elytron-security-oauth2` は、不透明なトークンやJWTトークンをリモートでイントロスペクションするための軽量なライブラリが必要な場合に最適な選択肢です。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:128
+#, fuzzy
 msgid "Note that a choice of using the opaque versus JWT token format is often driven by the architectural considerations. Opaque tokens are usually much shorter than JWT tokens but they require maintaining most of the token associated state in the provider database - the opaque tokens are effectively the database pointers. JWT tokens are significantly longer than the opaque tokens - but the providers are effectively delegating storing most of the token associated state to the client by storing it as the token claims and either signing and/or encrypting them."
-msgstr ""
+msgstr "不透明なトークンとJWTトークンのどちらを使用するかは、多くの場合、アーキテクチャ上の考慮事項によって決定されることに注意してください。不透明なトークンは、通常、JWT トークンよりもはるかに短いですが、トークンに関連する状態のほとんどをプロバイダのデータベースで維持する必要があります。JWT トークンは、不透明なトークンよりもかなり長いですが、プロバイダは、トークンに関連する状態のほとんどを、トークン・クレームとして保存し、それらに署名や暗号を施すことで、事実上、クライアントに保存を委ねています。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:130
+#, fuzzy
 msgid "Below is a summary of the options."
-msgstr ""
+msgstr "以下、選択肢の概要をご紹介します。"
 
 #. type: Table
 #: upstream/_guides/security.adoc:132
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "quarkus-oidc"
-msgstr ""
+msgstr "クォークス・アイディーシー"
 
 #. type: Table
 #: upstream/_guides/security.adoc:132
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "quarkus-smallrye-jwt"
-msgstr ""
+msgstr "クォークス・スモールライ・Jwt"
 
 #. type: Table
 #: upstream/_guides/security.adoc:134
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "quarkus-elytron-security-oauth2"
-msgstr ""
+msgstr "quarkus-elytron-security-oauth2"
 
 #. type: Table
 #: upstream/_guides/security.adoc:135
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Bearer JWT verification is required"
-msgstr ""
+msgstr "Bearer JWTの検証が必要です。"
 
 #. type: Table
 #: upstream/_guides/security.adoc:136
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Local Verification or Introspection"
-msgstr ""
+msgstr "現地検証または内観"
 
 #. type: Table
 #: upstream/_guides/security.adoc:137 upstream/_guides/security.adoc:173
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Local Verification"
-msgstr ""
+msgstr "現地検証"
 
 #. type: Table
 #: upstream/_guides/security.adoc:138 upstream/_guides/security.adoc:140
 #: upstream/_guides/security.adoc:142 upstream/_guides/security.adoc:172
 #: upstream/_guides/security.adoc:174
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Introspection"
-msgstr ""
+msgstr "イントロスペクション"
 
 #. type: Table
 #: upstream/_guides/security.adoc:139
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Bearer Opaque Token verification is required"
-msgstr ""
+msgstr "Bearer Opaque Tokenの検証が必要です。"
 
 #. type: Table
 #: upstream/_guides/security.adoc:141 upstream/_guides/security.adoc:146
@@ -362,15 +373,15 @@ msgstr ""
 #: upstream/_guides/security.adoc:162 upstream/_guides/security.adoc:165
 #: upstream/_guides/security.adoc:166 upstream/_guides/security.adoc:168
 #: upstream/_guides/security.adoc:170
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "No"
-msgstr ""
+msgstr "いいえ"
 
 #. type: Table
 #: upstream/_guides/security.adoc:143
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Refreshing JsonWebKey set for verifying JWT tokens"
-msgstr ""
+msgstr "JWTトークンを検証するためのJsonWebKeyセットの更新"
 
 #. type: Table
 #: upstream/_guides/security.adoc:144 upstream/_guides/security.adoc:145
@@ -379,21 +390,21 @@ msgstr ""
 #: upstream/_guides/security.adoc:153 upstream/_guides/security.adoc:156
 #: upstream/_guides/security.adoc:160 upstream/_guides/security.adoc:164
 #: upstream/_guides/security.adoc:169
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Yes"
-msgstr ""
+msgstr "はい。"
 
 #. type: Table
 #: upstream/_guides/security.adoc:147
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Represent token as Principal"
-msgstr ""
+msgstr "トークンをプリンシパルとして表現"
 
 #. type: Table
 #: upstream/_guides/security.adoc:151
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Inject JWT as MP JWT JsonWebToken"
-msgstr ""
+msgstr "MP JWT JsonWebTokenとしてJWTをインジェクトする。"
 
 #. type: Table
 #: upstream/_guides/security.adoc:155
@@ -404,27 +415,27 @@ msgstr "認可"
 
 #. type: Table
 #: upstream/_guides/security.adoc:159
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Multi-tenancy"
-msgstr ""
+msgstr "マルチテナンシー"
 
 #. type: Table
 #: upstream/_guides/security.adoc:163
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "UserInfo support"
-msgstr ""
+msgstr "UserInfoサポート"
 
 #. type: Table
 #: upstream/_guides/security.adoc:167
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Pem Key format support"
-msgstr ""
+msgstr "Pemキーフォーマットのサポート"
 
 #. type: Table
 #: upstream/_guides/security.adoc:171
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "InnerSigned/Encrypted or Encrypted tokens"
-msgstr ""
+msgstr "InnerSigned/EncryptedまたはEncryptedトークン"
 
 #. type: Title ===
 #: upstream/_guides/security.adoc:176
@@ -581,16 +592,18 @@ msgstr "Quarkusは非常に包括的な HashiCorp Vault のサポートを提供
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:235
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "National Vulnerability Database"
-msgstr ""
+msgstr "ナショナル・バルネラビリティ・データベース"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:240
+#, fuzzy
 msgid "Most of Quarkus tags have been registered in link:https://nvd.nist.gov[National Vulnerability Database] (NVD) using a Common Platform Enumeration (CPE) name format.  All registered Quarkus CPE names can be found using link:https://nvd.nist.gov/products/cpe/search/results?namingFormat=2.3&keyword=quarkus[this search query].  If a Quarkus tag represented by the given CPE name entry is affected by some CVE then you'll be able to follow a provided link to that CVE."
-msgstr ""
+msgstr "ほとんどのQuarkusタグは、Common Platform Enumeration (CPE)名の形式で link:https://nvd.nist.gov[National Vulnerability Database](NVD)に登録されています。登録されているすべてのQuarkusのCPE名は、 link:https://nvd.nist.gov/products/cpe/search/results?namingFormat=2.3&amp;keyword=quarkus[この検索クエリ]を使用して見つけることができます。指定されたCPE名のエントリで表されるQuarkusタグが何らかのCVEの影響を受けている場合、そのCVEへのリンクを辿ることができます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:242
+#, fuzzy
 msgid "We will be asking the NVD CPE team to update the list as well as link Quarkus CPE name entries with the related CVEs on a regular basis.  If you work with a plugin like OWASP plugin which is using NVD feeds to detect the vulnerabilities at the application build time and you see a false positive reported then please re-open link:https://github.com/quarkusio/quarkus/issues/2611[this issue] and provide the details."
-msgstr ""
+msgstr "NVD CPEチームには、リストの更新と、Quarkus CPE名のエントリと関連するCVEとのリンクを定期的に行うよう依頼しています。OWASPプラグインのように、アプリケーションのビルド時にNVDフィードを使用して脆弱性を検出するプラグインを使用していて、誤検出が報告された場合は、 link:https://github.com/quarkusio/quarkus/issues/2611[この問題]を再度開き、詳細を提供してください。"
