--- a/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:05+0000\n"
-"PO-Revision-Date: 2021-02-27 16:59+0900\n"
+"PO-Revision-Date: 2021-03-31 00:21+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -601,21 +601,18 @@ msgstr "両方のレスポンスには、これらのヘッダも含まれてい
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:377
-#, fuzzy
 msgid "Link: < http://example.com/people?page=0&size=2 >; rel=\"first\""
-msgstr "リンク: &lt; http://example.com/people?page=0&amp;size=2 http://example.com/people?page=0&amp;size=2 =\"first\""
+msgstr "Link: < http://example.com/people?page=0&size=2 >; rel=\"first\""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:378
-#, fuzzy
 msgid "Link: < http://example.com/people?page=2&size=2 >; rel=\"last\""
-msgstr "リンク: &lt; http://example.com/people?page=2&amp;size=2 http://example.com/people?page=2&amp;size=2 =\"last\""
+msgstr "Link: < http://example.com/people?page=2&size=2 >; rel=\"last\""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:379
-#, fuzzy
 msgid "Link: < http://example.com/people?page=1&size=2 >; rel=\"next\""
-msgstr "リンク: &lt; http://example.com/people?page=1&amp;size=2 http://example.com/people?page=1&amp;size=2 =\"next\""
+msgstr "Link: < http://example.com/people?page=1&size=2 >; rel=\"next\""
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:380
