Add machine translation

--- a/l10n/po/ja_JP/_guides/topic/standards.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/standards.adoc.po
@@ -42,33 +42,39 @@ msgstr "{project-name} - 標準に対するスタンス"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:16
+#, fuzzy
 msgid "Let's go to the quark of things.  We don't want you to spend hours learning new technologies.  Instead, {project-name} provides leading frameworks and technologies from open source projects, such as https://vertx.io[Vert.x], https://camel.apache.org[Camel], http://hibernate.org[Hibernate] and https://resteasy.github.io[RESTEasy]. You can also find innovative community projects, such as https://smallrye.io[SmallRye]. If you are looking for standards you can find https://microprofile.io[MicroProfile] and selected specifications from https://jakarta.ee[Jakarta EE]."
-msgstr ""
+msgstr "物事の核心に迫ろう。私たちは、新しい技術の習得に何時間も費やしてほしくありません。その代わり、{project-name}では、 link:https://vertx.io[Vert.x]、 link:https://camel.apache.org[Camel]、 link:http://hibernate.org[Hibernate]、 link:https://resteasy.github.io[RESTEasy]などのオープンソースプロジェクトの主要なフレームワークや技術を提供しています。また、 link:https://smallrye.io[SmallRye]のような革新的なコミュニティプロジェクトもあります。標準規格を探している場合は、 link:https://jakarta.ee[Jakarta EE]の link:https://microprofile.io[MicroProfile]と選択された仕様を見つけることができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:18
+#, fuzzy
 msgid "Our dependency injection solution is based on CDI with Arc."
-msgstr ""
+msgstr "当社の依存性注入ソリューションは、CDIにArcを加えたものです。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:20
+#, fuzzy
 msgid "You can use JAX-RS annotations to define the REST endpoints with https://resteasy.github.io[RESTEasy]."
-msgstr ""
+msgstr "link:https://resteasy.github.io[RESTEasy]では、JAX-RSアノテーションを使ってRESTエンドポイントを定義することができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:23
+#, fuzzy
 msgid "You can use JPA annotations to map your persistent entities and JTA annotations to declare the transaction boundaries with http://hibernate.org[Hibernate]"
-msgstr ""
+msgstr "JPAアノテーションを使って永続的なエンティティをマッピングし、JTAアノテーションを使って link:http://hibernate.org[Hibernate]とのトランザクション境界を宣言することができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:25
+#, fuzzy
 msgid "You can use https://smallrye.io[SmallRye] to configure, secure, document and monitor your application."
-msgstr ""
+msgstr "link:https://smallrye.io[SmallRye]を使用して、アプリケーションの設定、セキュリティ、文書化、監視を行うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:27
+#, fuzzy
 msgid "You can use https://vertx.io[Vert.x] or https://camel.apache.org[Camel], and we support much more."
-msgstr ""
+msgstr "link:https://vertx.io[Vert.x]や link:https://camel.apache.org[Camel]を使用することができ、さらに多くのものをサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:29
