--- a/l10n/po/ja_JP/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13 released - DevServices, Kubernetes Service Binding, OpenTelemetry'\n"
@@ -34,46 +34,61 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.13リリース - DevServices, Kubernetes Service Binding, OpenTelemetry'\n"
+"date: 2021-03-30\n"
+"tags: release\n"
+"synopsis: Quarkus 1.13には新機能が追加され、開発や展開がさらにシンプルになりました。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:11
+#, fuzzy
 msgid "Today, we announce the availability of Quarkus 1.13.0.Final."
-msgstr ""
+msgstr "本日、Quarkus 1.13.0.Finalがリリースされました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:13
+#, fuzzy
 msgid "This release brings several new features:"
-msgstr ""
+msgstr "今回のリリースでは、いくつかの新機能が追加されました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:15
+#, fuzzy
 msgid "DevServices simplifies testing with containers."
-msgstr ""
+msgstr "DevServicesはコンテナでテストを簡素化します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:16
+#, fuzzy
 msgid "OpenTelemetry is now supported via two new extensions."
-msgstr ""
+msgstr "OpenTelemetryは、2つの新しいエクステンションでサポートされています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:17
+#, fuzzy
 msgid "Kubernetes Service Binding simplifies the deployment on Kubernetes."
-msgstr ""
+msgstr "Kubernetes Service Bindingは、Kubernetes上での展開を簡素化します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:18
+#, fuzzy
 msgid "We introduced a new MicroProfile REST Client based on RESTEasy Reactive."
-msgstr ""
+msgstr "RESTEasy Reactiveをベースにした新しいMicroProfile REST Clientを紹介しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:19
+#, fuzzy
 msgid "`quarkus-jacoco` can generate your test coverage reports."
-msgstr ""
+msgstr "`quarkus-jacoco` は、テストカバレッジレポートを作成することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:21
+#, fuzzy
 msgid "And as usual its fair share of bugfixes and small improvements all over the place."
-msgstr ""
+msgstr "また、いつものようにバグフィックスや小さな改良が随所に施されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:22
@@ -83,8 +98,9 @@ msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:25
+#, fuzzy
 msgid "Eager to migrate your existing applications? Here is https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[our migration guide for 1.13]."
-msgstr ""
+msgstr "既存のアプリケーションを移行したいとお考えですか？ここでは、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13の移行ガイド]をご紹介します。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:26
@@ -94,159 +110,183 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:28
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Zero Config Setup with DevServices"
-msgstr ""
+msgstr "DevServicesによるゼロコンフィグ設定"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:32
+#, fuzzy
 msgid "With Quarkus, our main goal is to make developer lives easier and bring back developer joy.  In 1.13, we added a new element to the (not so secret) Quarkus recipe: DevServices."
-msgstr ""
+msgstr "Quarkusでは、開発者の生活を楽にし、開発者の喜びを取り戻すことを主な目標としています。1.13では、Quarkusのレシピに新しい要素を追加しました（秘密ではありません）。それがDevServicesです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:35
+#, fuzzy
 msgid "When starting dev mode (live reload), we are now able to automatically start containers for your tests and you don't even need to configure anything: the container is automatically wired to the Quarkus dev mode configuration."
-msgstr ""
+msgstr "開発モードの起動（ライブリロード）時に、テスト用のコンテナを自動的に起動できるようになり、何も設定する必要がなくなりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:37
+#, fuzzy
 msgid "For instance, if you're developing a PostgreSQL-based application, as soon as you have the PostgreSQL JDBC extension in your pom, a container will be started for testing using Testcontainers."
-msgstr ""
+msgstr "例えば、PostgreSQLベースのアプリケーションを開発している場合、PostgreSQL JDBC extensionをpomに入れれば、Testcontainersを使ってテスト用のコンテナが開始されます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:40
+#, fuzzy
 msgid "You only need to define your configuration for production with the `%prod.` prefix.  The dev mode one is taken care of."
-msgstr ""
+msgstr "本番用の設定は、 `%prod.` のプレフィックスで定義するだけでOKです。devモード用のものは準備されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:42
+#, fuzzy
 msgid "You will find all the details about this new feature in the link:/guides/datasource#devservices-configuration-free-databases[Datasource guide]."
-msgstr ""
+msgstr "この新機能の詳細は、 link:/guides/datasource#devservices-configuration-free-databases[データソースガイド]に記載されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:43
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "OpenTelemetry Extension"
-msgstr ""
+msgstr "OpenTelemetry Extension"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:46
+#, fuzzy
 msgid "The https://opentelemetry.io/[OpenTelemetry] project from the https://www.cncf.io[Cloud Native Computing Foundation] is an initiative to merge the OpenTracing and OpenCensus projects to provide a common project for all telemetry. Tracing is the first piece of OpenTelemetry which GA'd in the last month, metrics and logging are still under development."
-msgstr ""
+msgstr "link:https://www.cncf.io[Cloud Native Computing Foundation]の link:https://opentelemetry.io/[OpenTelemetry]プロジェクトは、OpenTracing と OpenCensus プロジェクトを統合し、すべての遠隔測定のための共通プロジェクトを提供する取り組みです。Tracing は先月 GA が行われた OpenTelemetry の最初の部分で、metrics と logging はまだ開発中です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:49
+#, fuzzy
 msgid "Quarkus 1.13 introduces a new extension for OpenTelemetry called `quarkus-opentelemetry` which offers the ability to trace requests. For exporting traces to a Jaeger collector, use the `quarkus-openeltemetry-exporter-jaeger` extension which depends on `quarkus-opentelemetry`.  With this initial version, traces are available in JAX-RS Resource methods, REST Client, and Reactive Messaging with Kafka. Further integrations with other extensions will come in future releases, as well as a guide and quickstart."
-msgstr ""
+msgstr "Quarkus 1.13では、OpenTelemetryの新しいエクステンション（ `quarkus-opentelemetry` ）が導入され、リクエストをトレースする機能が提供されています。トレースをJaegerコレクターにエクスポートするには、 `quarkus-opentelemetry` に依存する `quarkus-openeltemetry-exporter-jaeger` を使用してください。この初期バージョンでは、JAX-RS Resourceメソッド、REST Client、およびReactive Messaging with Kafkaでトレースが利用できます。他の拡張機能との統合は、ガイドやクイックスタートと同様に、今後のリリースで行われる予定です。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:50
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kubernetes Service Binding"
-msgstr ""
+msgstr "Kubernetesのサービスバインディング"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:55
+#, fuzzy
 msgid "Quarkus supports binding services to applications via the https://github.com/k8s-service-bindings/spec[Service Binding Specification for Kubernetes].  Specifically Quarkus implements the https://github.com/k8s-service-bindings/spec#application-projection[Application Projection] part of the specification, thus allowing applications running in appropriately configured Kubernetes clusters to consume services (such as a Database or a Broker) without the need for user configuration."
-msgstr ""
+msgstr "Quarkusは、 link:https://github.com/k8s-service-bindings/spec[Service Binding Specification for Kubernetes]を介したサービスのアプリケーションへのバインディングをサポートしています。具体的には、Quarkusは仕様の link:https://github.com/k8s-service-bindings/spec#application-projection[Application Projection]部分を実装しており、適切に構成されたKubernetesクラスタで実行されるアプリケーションが、ユーザーの設定を必要とせずにサービス（DatabaseやBrokerなど）を利用できるようになります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:57
+#, fuzzy
 msgid "Currently, the following Quarkus extensions support this feature:"
-msgstr ""
+msgstr "現在、以下のQuarkus拡張機能がこの機能をサポートしています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:59
+#, fuzzy
 msgid "`quarkus-jdbc-mariadb`"
-msgstr ""
+msgstr "`quarkus-jdbc-mariadb`"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:60
+#, fuzzy
 msgid "`quarkus-jdbc-mssql`"
-msgstr ""
+msgstr "`quarkus-jdbc-mssql`"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:61
+#, fuzzy
 msgid "`quarkus-jdbc-mysql`"
-msgstr ""
+msgstr "`quarkus-jdbc-mysql`"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:62
+#, fuzzy
 msgid "`quarkus-jdbc-postgresql`"
-msgstr ""
+msgstr "`quarkus-jdbc-postgresql`"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:63
+#, fuzzy
 msgid "`quarkus-kafka-client`"
-msgstr ""
+msgstr "`quarkus-kafka-client`"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:64
+#, fuzzy
 msgid "`quarkus-smallrye-reactive-messaging-kafka`"
-msgstr ""
+msgstr "`quarkus-smallrye-reactive-messaging-kafka`"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:66
+#, fuzzy
 msgid "This list of extensions will grow as more services with supported bindings become available on Kubernetes."
-msgstr ""
+msgstr "この拡張機能のリストは、サポートされたバインディングを持つサービスがKubernetesで利用できるようになるにつれ、増えていきます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:68
+#, fuzzy
 msgid "To enable Service Binding support, in addition to one of the currently supported extensions, the `quarkus-kubernetes-service-binding` extension needs to be added to the application dependencies."
-msgstr ""
+msgstr "サービスバインディングのサポートを有効にするには、現在サポートされている拡張機能の1つに加えて、アプリケーションの依存関係に `quarkus-kubernetes-service-binding` 拡張機能を追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:70
+#, fuzzy
 msgid "Everything you need to know about it is detailed in the link:/guides/deploying-to-kubernetes#service-binding[Kubernetes guide]."
-msgstr ""
+msgstr "そのために必要なことは、 link:/guides/deploying-to-kubernetes#service-binding[Kubernetesのガイド]に詳しく書かれています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:71
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "MicroProfile REST Client based on RESTEasy Reactive"
-msgstr ""
+msgstr "MicroProfile REST Client based on RESTEasy Reactive"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:75
+#, fuzzy
 msgid "We are continuing to enrich the RESTEasy Reactive experience and, this time, it's on the REST Client front.  A new RESTEasy Reactive-based REST Client extension `quarkus-rest-client-reactive` is present in Quarkus 1.13."
-msgstr ""
+msgstr "私たちはRESTEasy Reactiveの体験をより豊かなものにするために、今回はRESTクライアントの面での取り組みを続けています。新しいRESTEasy ReactiveベースのRESTクライアント拡張機能 `quarkus-rest-client-reactive` がQuarkus 1.13に搭載されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:77
+#, fuzzy
 msgid "Note that RESTEasy Reactive can be used for reactive but also for traditional blocking workloads."
-msgstr ""
+msgstr "なお、RESTEasy Reactiveは、リアクティブなワークロードだけでなく、従来のブロッキングなワークロードにも使用できます。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:78
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Vert.x based Websockets"
-msgstr ""
+msgstr "Vert.xベースのWebsockets"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:81
+#, fuzzy
 msgid "Until now, if you wanted websockets support in your applications, you had to switch to Undertow."
-msgstr ""
+msgstr "これまでは、アプリケーションでWebsocketをサポートしたい場合は、Undertowに乗り換える必要がありました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:83
+#, fuzzy
 msgid "Quarkus 1.13 introduces a pure-Vert.x-based Websockets extension called `quarkus-websockets`."
-msgstr ""
+msgstr "Quarkus 1.13では、 `quarkus-websockets` という純粋なVert.xベースのWebsockets拡張が導入されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:84
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Test Coverage Reports"
-msgstr ""
+msgstr "テストカバレッジレポート"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:87
+#, fuzzy
 msgid "Given the way Quarkus is architected, it was not as easy as it should be to generate test coverage reports with Jacoco."
-msgstr ""
+msgstr "Quarkusのアーキテクチャを考えると、Jacocoでテストカバレッジレポートを作成するのはそれほど簡単ではありませんでした。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:89
+#, fuzzy
 msgid "Quarkus 1.13 comes with `quarkus-jacoco` which will automatically generate your test coverage reports. And it does not require any Maven setup anymore. More about this in link:/guides/tests-with-coverage[our updated guide]."
-msgstr ""
+msgstr "Quarkus 1.13には、テストカバレッジレポートを自動的に生成する `quarkus-jacoco` 。また、Mavenのセットアップも必要ありません。詳しくは、 link:/guides/tests-with-coverage[最新のガイド]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:90
@@ -256,8 +296,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:93
+#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/1.13.0.CR1[1.13.0.CR1], and https://github.com/quarkusio/quarkus/releases/tag/1.13.0.Final[1.13.0.Final] on GitHub."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.0.CR1[1.13.0.CR1]および link:https://github.com/quarkusio/quarkus/releases/tag/1.13.0.Final[1.13.0.Final]の完全な変更履歴はGitHubでご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:94
@@ -283,13 +324,15 @@ msgstr "貢献者"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:104
+#, fuzzy
 msgid "The Quarkus community is growing and has now https://github.com/quarkusio/quarkus/graphs/contributors[461 contributors].  Many many thanks to each and everyone of them."
-msgstr ""
+msgstr "Quarkusコミュニティは成長を続けており、現在の link:https://github.com/quarkusio/quarkus/graphs/contributors[貢献者]数 link:https://github.com/quarkusio/quarkus/graphs/contributors[は461名]となっています。それぞれの方に感謝します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:106
+#, fuzzy
 msgid "In particular for the 1.13 release, thanks to adrien, Alexey Loubyansky, Andrii Pyvovarov, Andy Damevin, Ante Butić, antoniodvr, Auri Munoz, Bernhard Lutzmann, Bill Burke, Bruno Leonardo Gonçalves, Cem Nura, Chris Laprun, Christopher Chianelli, Clement Escoffier, David M. Lloyd, Davide D'Alto, Edoardo Vacchi, Emanuel Alves, Eric Deandrea, Erin Schnabel, essobedo, Falko Modler, Foivos Zakkak, Geoffrey De Smet, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gytis Trikleris, Ioannis Canellos, ismail BASKIN, Jacob Middag, Jaikiran Pai, Jan Martiška, Jim Ma, JiriOndrusek, Johnnes Souza, Jonathan Meier, Jose, Josef Smrcka, Julien Ponge, Justin Lee, Katia Aresti, Ken Finnigan, Knut Wannheden, Ladislav Thon, Lena Brueder, Loïc Mathieu, Maciej Swiderski, manusa, Manyanda Chitimbo, markusdlugi, Martin Kouba, Martin Panzer, Matej Novotny, Matthias Andreas Benkard, Max Rydahl Andersen, Mayank Kunwar, Michał Szynkiewicz, mrizzi, PAPADOPOULOS Nikolaos, Peter Palaga, Philip Hayes, Phillip Krüger, Robbie Gemmell, Roberto Cortez, Rostislav Svoboda, ruromero, Sanne Grinovero, SaumyaSingh1, Sergey Beryozkin, Sergio Sivelli, Shaaf, shawkins, Simon Hofer, Stephen Nimmo, Steven Hawkins, Stuart Douglas, Stéphane Épardaud, Suleimenov Yelzhas, Thomas McWork, Timothy Power, Tobias Stadler, Vasilis Andritsoudis, Vincent Sevel, xstefank and Yoann Rodière."
-msgstr ""
+msgstr "特に 1.13 リリースでは、adrien, Alexey Loubyansky, Andrii Pyvovarov, Andy Damevin, Ante Butić, antoniodvr, Auri Munoz, Bernhard Lutzmann, Bill Burke, Bruno Leonardo Gonçalves, Cem Nura, Chris Laprun, Christopher Chianelli, Clement Escoffier, David M. Lloyd, Emanuel Alves, Eric Deandrea, Erin Schnabel, essobedo, Falko Modler, Foivos Zakkak に感謝します。Lloyd, Davide D'Alto, Edoardo Vacchi, Emanuel Alves, Eric Deandrea, Erin Schnabel, essobedo, Falko Modler, Foivos Zakkak, Geoffrey De Smet, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gytis Trikleris, Ioannis Canellos, ismail BASKIN, Jacob Middag,Jaikiran Pai, Jan Martiška, Jim Ma, JiriOndrusek, Johnnes Souza, Jonathan Meier, Jose, Josef Smrcka, Julien Ponge, Justin Lee, Katia Aresti, Ken Finnigan, Knut Wannheden, Ladislav Thon, Lena Brueder, Loïc Mathieu, Maciej Swiderski, manusa, Manyanda Chitimbo, markusdlugi,Martin Kouba, Martin Panzer, Matej Novotny, Matthias Andreas Benkard, Max Rydahl Andersen, Mayank Kunwar, Michał Szynkiewicz, mrizzi, PAPADOPOULOS Nikolaos, Peter Palaga, Philip Hayes, Phillip Krüger, Robbie Gemmell, Roberto Cortez, Rostislav Svoboda, ruromero, Sanne Grinovero,SaumyaSingh1, Sergey Beryozkin, Sergio Sivelli, Shaaf, shawkins, Simon Hofer, Stephen Nimmo, Steven Hawkins, Stuart Douglas, Stéphane Épardaud, Suleimenov Yelzhas, Thomas McWork, Timothy Power, Tobias Stadler, Vasilis Andritsoudis, Vincent Sevel, xstefank, Yoann Rodière."
 
 #. type: Title ==
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:107
